feat(api): enhance exception handling and improve documentation across various classes refactor(api): general code enhancements across all the API